# G4CAD

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: G4CADConfig.cmake.in
docs/: validation_benchmark_investigation.md
docs/progress/: 2026-06-29-g4cad-complex-geometry-progress.md
docs/superpowers/plans/: 2026-06-25-g4cad-validation-benchmark-plan.md  2026-06-26-g4stepsolid-split.md
docs/superpowers/specs/: 2026-06-25-g4cad-validation-benchmark-design.md  2026-06-26-g4stepsolid-split-design.md
examples/validation_benchmark/: CMakeLists.txt
examples/validation_benchmark/python/: plot_cross_section.py  plot_cross_sections.py  plot_scaling.py  plot_statistics.py  plot_validation.py
examples/validation_benchmark/src/: BenchmarkRunner.cc  BenchmarkRunner.hh  CrossSectionSampler.cc  CrossSectionSampler.hh  EnvironmentRecord.cc  EnvironmentRecord.hh  GeometryRegistry.cc  NavigationValidator.hh  OutputWriter.cc  OutputWriter.hh  PhysicsRunner.cc  PhysicsRunner.hh  SafetyDiagnostic.cc  SafetyDiagnostic.hh  main.cc
examples/validation_benchmark/src/geant4/: ActionInitialization.hh  DetectorConstruction.cc  DetectorConstruction.hh  EventAction.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  RunAction.cc  SteppingAction.cc  SteppingAction.hh
examples/validation_benchmark/step_files/: box.step  cylinder.step  sphere.step  touching_boxes.step
include/: G4StepLoader.hh  G4StepSolid.hh
share/environment/: IR3.environment.yml  IR3.explicit.txt  README.md
share/example/: CMakeLists.txt  DetectorConstruction.cc  DetectorConstruction.hh  RP.step  main.cc
src/: G4StepConfig.hh  G4StepLoader.cc  G4StepSolid.cc  G4StepSolidImpl.cc  G4StepSolidImpl.hh
tests/validation_benchmark/: CMakeLists.txt  regen_plots.sh  run_paper_benchmarks.sh
tests/validation_benchmark/python/: plot_cross_sections.py  plot_safety_diagnostic.py  plot_statistics.py
tests/validation_benchmark/src/: BenchmarkRunner.cc  CrossSectionSampler.cc  CrossSectionSampler.hh  GeometryRegistry.hh  NavigationValidator.cc  OutputWriter.cc  main.cc
tests/validation_benchmark/src/geant4/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.hh  RunAction.hh
tests/validation_benchmark/step_files/: box_hole.step
